--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
-.modal-container{
+li{
+  display: block;
+  width: fit-content;
+  background-color: red;
+}
+.modal-container {
   width: 70vw;
   min-width: 250px;
   height: 50vh;
@@ -8,4 +13,52 @@
   background-color: rgb(82, 85, 119);
   color: white;
   margin: 0 auto;
+}
+
+.todo input {
+  width: 200px;
+  height: 20px;
+  outline: none;
+  color: white;
+  border: 0.01em solid whitesmoke;
+  margin: 3px 0;
+  background-color: rgb(82, 85, 119);
+  display: block;
+  font-size: 14px;
+  font-family: Arial, Helvetica, sans-serif;
+  padding-left: 3px;
+}
+
+.todo p {
+  font-family: Arial, Helvetica, sans-serif;
+
+  font-size: 14px;
+  padding-left: 3px;
+  width: 200px;
+  height: 20px;
+  color: white;
+  margin: 3px 0;
+  background-color: rgb(82, 85, 119);
+  display: block;
+}
+
+.todo input::placeholder {
+  padding-left: 5px;
+  color: whitesmoke;
+}
+
+.todo > button {
+  width: fit-content;
+  min-width: 60px;
+  padding: 6px 5px;
+  background-color: rgb(149, 153, 194);
+  border: 1px solid rgb(255, 255, 255);
+  border-radius: 3px;
+  outline: none;
+  margin: 3px;
+}
+
+.todo > button:hover {
+  background-color: rgb(121, 125, 172);
+  cursor: pointer;
 }
