--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
 li{
   display: block;
   width: fit-content;
-  background-color: red;
 }
 .modal-container {
+  position: absolute;
+  top: 50%;
+  left:50%;
+  transform: translate(-50%,-50%);
   width: 70vw;
   min-width: 250px;
   height: 50vh;
@@ -12,7 +15,10 @@ li{
   border-radius: 8px;
   background-color: rgb(82, 85, 119);
   color: white;
-  margin: 0 auto;
+}
+
+.todo>div{
+  display: inline-block;
 }
 
 .todo input {
@@ -47,7 +53,7 @@ li{
   color: whitesmoke;
 }
 
-.todo > button {
+.todo  button {
   width: fit-content;
   min-width: 60px;
   padding: 6px 5px;
@@ -61,4 +67,8 @@ li{
 .todo > button:hover {
   background-color: rgb(121, 125, 172);
   cursor: pointer;
+}
+
+.inputValues{
+  display: inline-block;
 }
